optimize ddd